--- a/docs/Large Scale PGM Inference.ipynb
+++ b/docs/Large Scale PGM Inference.ipynb
@@ -12,7 +12,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Scalable Nonparametric Directed Graphical Model Inference and Learning\n\nAuthor: Kai Londenberg (Kai.Londenberg@gmail.com)",
+      "### Scalable Nonparametric Directed Graphical Model Inference and Learning\n\nAuthor: Kai Londenberg (Kai.Londenberg@gmail.com), June 2014",
       "\n",
       "#### Abstract\n",
       "\n",
