--- a/docs/Large Scale PGM Inference.ipynb
+++ b/docs/Large Scale PGM Inference.ipynb
@@ -21,8 +21,9 @@
       "\n",
       "#### Motivation\n",
       "\n",
-      "Two papers got me thinking: [Dauwels et al: Particle Methods as Message Passing](http://www.dauwels.com/Papers/Particle.pdf), which gives a nice overview of how to generalize Message Passing methods, by mixing  sampling based methods freely with exact or fast approximate inference algorithms. The second is [Neiswanger et al:\u0003\n",
-      "Embarassingly Parallel MCMC](http://arxiv.org/pdf/1311.4780v1.pdf), where an algorithm is described which can be used to scale MCMC to problems with huge data sets. \n",
+      "Two papers got me thinking: [Dauwels et al: Particle Methods as Message Passing](http://www.dauwels.com/Papers/Particle.pdf), which gives a nice overview of how to generalize Message Passing methods, by mixing  sampling based methods freely with exact or fast approximate inference algorithms. ",
+      "\n",
+      "The second is [Neiswanger et al: Embarassingly Parallel MCMC](http://arxiv.org/pdf/1311.4780v1.pdf), where an algorithm is described which can be used to scale MCMC to problems with huge data sets. \n",
       "\n",
       "Both algorithms actually suffer from the same problem, namely the **Message Fusion** problem (described way down). A problem which has luckily been successfully solved before. I add to that list by proposing a new approach to efficient density estimation from MCMC models, called **Density Mapping**\n",
       "\n",
